# haskell-hello-ci

./: .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  hello.cabal  stack.yaml
src/: Main.hs
