name:                hello
version:             0.1.0.0
homepage:            https://github.com/lassik/haskell-hello-ci
license:             BSD3
license-file:        LICENSE
author:              Lassi Kortela
maintainer:          lassi@lassi.io
copyright:           <3
category:            Experimental
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Paths_hello
  build-depends:         base >= 4.7 && < 5
